Fix slider positioning on mobile screensizes

--- a/src/assets/scss/templates/_home.scss
+++ b/src/assets/scss/templates/_home.scss
@@ -1,5 +1,11 @@
 body.home {
 	
+	.forcefullwidth_wrapper_tp_banner {
+		
+		margin-top: 4rem !important;
+		
+	}
+	
 	#events {
 		
 		@media only screen and (max-width: 1023px) {
